Adds functionality for linear visualiser :dog:

--- a/visualiser/public/index.html
+++ b/visualiser/public/index.html
@@ -9,6 +9,9 @@
       content="Web site created for algorithm visualization"
     />
 
+    <link rel="stylesheet" href="./css/App.css"></link>
+    <link rel="stylesheet" href="./css//LinearSearch.css"></link>
+    
     <title>React App</title>
   </head>
   <body>
