--- a/public/index.html
+++ b/public/index.html
@@ -4,18 +4,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created for algorithm visualization"
-    />
+    <meta name="description" content="Web site created for algorithm visualization" />
 
     <link rel="stylesheet" href="./css/App.css"></link>
     <link rel="stylesheet" href="./css//LinearSearch.css"></link>
-    
-    <title>React App</title>
+    <link rel="stylesheet" href= "https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+
+    <title>Algorithm Visualiser</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root"></div>    
   </body>
 </html>
